Add ConnectionStrings section to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=hotel;User Id=root;Password=Ovettmora_12;"
+  },
   "AllowedHosts": "*"
 }
